--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@kalimahapps/vue-icons": "^1.7.1",
     "axios": "^1.7.7",
+    "oh-vue-icons": "^1.0.0-rc3",
     "pinia": "^2.2.6",
+    "primeicons": "^7.0.0",
     "vue": "^3.5.12",
+    "vue3-spinners": "^1.2.2",
     "zod": "^3.23.8",
     "zustand": "^5.0.1"
   },
